# gym-app

./: Procfile
backend/: manage.py  pyproject.toml  requirements.txt
backend/gym/: models.py  serializers.py  urls.py  views.py
backend/gym/management/commands/: seed_defaults.py
backend/gym/migrations/: 0001_initial.py  0002_remove_exercise_exercise_type.py  0003_musclegroup_icon_tag_icon.py  0004_rename_track_resistance_exercise_track_resistance_numeric_and_more.py  0005_userlocation_alter_gymsession_location.py
backend/gym/serializers/: categories.py  events.py  exercises.py  locations.py  sessions.py
backend/gym/views/: auth.py  categories.py  events.py  exercises.py  locations.py  sessions.py
backend/gym_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/server/: settings.py  settings_prod.py  urls.py  wsgi.py
frontend/: .env.production  README.md  package-lock.json  package.json  quasar.config.ts
frontend/src/boot/: axios.ts
frontend/src/components/: ExerciseEventList.vue  ExerciseList.vue  LastExerciseCompletionSummary.vue  NoteEditor.vue  SessionExerciseList.vue  SessionLocationControl.vue
frontend/src/layouts/: AuthLayout.vue  MainLayout.vue
frontend/src/pages/: AccountPage.vue  ExerciseCompletionPage.vue  ExerciseCreatePage.vue  ExerciseListPage.vue  HomePage.vue  LoginPage.vue  SignupPage.vue
frontend/src/router/: index.ts  routes.ts
frontend/src/stores/: auth.ts
frontend/src/types/: types.ts
frontend/src/utils/: csrf.ts  isAxiosError.ts
